# WeChatAutoReply

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/src/main/java/com/example/wechatautoreply/: App.kt
app/src/main/java/com/example/wechatautoreply/ai/: LlamaClient.kt  LlamaEngine.kt  ModelManager.kt
app/src/main/java/com/example/wechatautoreply/data/: ContactManager.kt  ReplyLogManager.kt  SettingsManager.kt
app/src/main/java/com/example/wechatautoreply/model/: ChatMessage.kt  Contact.kt  ReplyLog.kt
app/src/main/java/com/example/wechatautoreply/receiver/: BootReceiver.kt
app/src/main/java/com/example/wechatautoreply/service/: LlamaService.kt  WeChatNotificationService.kt
app/src/main/java/com/example/wechatautoreply/ui/: ContactsActivity.kt  LogActivity.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/layout/: activity_contacts.xml  activity_log.xml  activity_main.xml  activity_settings.xml  item_contact.xml  item_log.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
